Fixed some bugs in denest, and added integral to compute evidence.

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,11 +1,12 @@
 GSL_PREFIX = /sw
+MCMC_PREFIX = /Users/farr/Documents/code/mcmc
 
-CFLAGS += -I$(GSL_PREFIX)/include -L$(GSL_PREFIX)/lib -lgslcblas -lgsl
-LFLAGS += -L$(GSL_PREFIX)/lib -lgslcblas -lgsl
+CFLAGS += -I$(GSL_PREFIX)/include -I$(MCMC_PREFIX) -L$(GSL_PREFIX)/lib -lgslcblas -lgsl
+LFLAGS += -L$(GSL_PREFIX)/lib -lgslcblas -lgsl -lm
 
-OBJS = sample.o rng_init.o ../denest.o
+OBJS = sample.o rng_init.o ../denest.o $(MCMC_PREFIX)/mcmc.o
 
-CHECK_PROGS = uniform2d linear_peak small_strip
+CHECK_PROGS = uniform2d linear_peak small_strip mcmc_gaussian_integral
 
 $(CHECK_PROGS): sample.h $(OBJS)
 
